# simple_fiducial_mapping

./: .rosinstall  CMakeLists.txt  README.md  package.xml
include/simple_fiducial_mapping/: ceres_backend.h  cv_utils.h  localization_node.h  map_graph.h  mapping.h  visualizer.h
launch/: record_mapping_bag.launch
param/apriltags2/: grow_module_tags.yaml  overhead_tags.yaml
param/robot_localization/: fiducial.yaml  odom.yaml
src/: ceres_backend.cpp  cv_utils.cpp  localization_node.cpp  localization_node_main.cpp  localize_from_bag.cpp  map_from_bag.cpp  map_graph.cpp  mapping.cpp  visualizer.cpp
test/: mapping_test.cpp
